Automatically backed up by Learn

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,3 +13,7 @@
   <% end %>
   <%= f.submit %>
 <% end %>
+
+
+<!-- user can assign categories to a post when the post is created
+instances of our post class respond to a method called category_ids= 
