--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,10 +4,11 @@
 
 <%= form_for post do |f| %>
   <%= f.label "Title" %>
-  <%= f.text_field :title %> <!--text field to enter name of new category nested under post_params -->
+  <%= f.text_field :title %>
   <%= f.label "Content" %>
   <%= f.text_area :content %>
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+  <!--text field to enter name of new category nested under post_params -->
   <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
     <%= categories_fields.text_field :name %>
   <% end %>
